<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwimDroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">Today at %s</string>
    <string name="tomorrow_at_time_fmt">Tomorrow at %s</string>
    <string name="date_time_fmt" formatted="false">%s, %s</string>
    <string name="no_title_label">(No title)</string>
    <string name="event_create">"New event"</string>
    <string name="day_view_new_event_hint">+ New event</string>
    <string name="new_event_dialog_label">"New event"</string>
    <string name="new_event_dialog_option">"New event"</string>
    <string name="template_announce_item_index">Event</string>
    <string name="no_training_today_add_one">Nessun allenamento previsto per oggi. Aggiungine uno!</string>
    <string name="ripetizioni_per_distanza">Ripetizioni x Distanza: </string>
    <string name="stile">Stile: </string>
    <string name="andatura">Andatura</string>
    <string name="tempo_di_percorrenza">Tempo di percorrenza: </string>
    <string name="show_athletes_times">Visualizza tempi atleti</string>

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
    -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
    -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="title_activity_time_picker">SwimDroid - TimePicker</string>
    <string name="title_activity_day_view">DayViewActivity</string>
    <string name="title_activity_new_training">NewTrainingActivity</string>
    <string name="title_activity_new_exercises_list">NewExercisesList</string>
    <string name="title_activity_athletes_times">AthletesTimesActivity</string>
    <string name="no_exercises_add_one">Non ci sono ancora esercizi per questo allenamento aggiungine uno!</string>
    <string name="swimTimeSeparator2">\&quot;</string>
    <string-array name="stiliSpinner1">
        <item>Stile Libero</item>
        <item>Stile Gara</item>
        <item>Dorso</item>
        <item>Rana</item>
        <item>Delfino</item>
        <item>Misti</item>
    </string-array>
    
    <string-array name="stiliSpinner2">
        <item>Completo</item>
        <item>Tecnica</item>
        <item>Solo braccio destro</item>
        <item>Solo braccio sinistro</item>
        <item>Solo gambe</item>
        <item>Tavoletta</item>
        <item>Pull Buoy</item>
        <item>Palette</item>
        <item>Pinne</item>
        <item>Pull Buoy + Palette</item>
        <item>Palette + Pinne</item>
    </string-array>
    
    <string-array name="Andature">
        <item>A1 - Aerobico</item>
        <item>A2 - Resistenza Aerobica</item>
        <item>B1 - Soglia Anaerobica</item>
        <item>B2 - VO2Max</item>
        <item>C1 - Picco di Lattato</item>
        <item>C2 - Tolleranza al Lattato</item>
        <item>C3 - Massima Velocità</item>
        <item>D - Passi Gara</item>
    </string-array>

</resources>
